# grimoire

./: .codescenerc  .env.example  .gitattributes  .githooks-info  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ENHANCEMENTS.md  LICENSING.md  README.md  SECURITY.md  SKILL.md  SUPPORT.md  TRADEMARKS.md  chitragupta.vertical.json  eslint.config.js  index.html  journal.md  package.json  playwright.config.ts  playwright.smoke.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  trademarks.md  tsconfig.app.json  tsconfig.json  ui-design.pen  untitled-journal-1778099805.md  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  mobile.json
src-tauri/fixtures/import-corpora/: apple-journal-html.golden.json  bear-textbundle.golden.json  day-one-json.golden.json  day-one-media-categories.golden.json  journey-json.golden.json  mixed-markdown-zip.golden.json  notion-markdown.golden.json  obsidian-link-styles.golden.json  obsidian-vault.golden.json
src-tauri/icons/: icon.icns
src-tauri/src/: ai_agents.rs  ai_provider_keys.rs  app_updater.rs  claude_cli.rs  invoke_handler.rs  lib.rs  lib_tests.rs  main.rs  mcp.rs  mcp_config_status_tests.rs  mcp_config_tests.rs  mcp_resources.rs  mcp_runtime_tests.rs  menu.rs  menu_bar.rs  menu_bar_window.rs  native_startup_smoke.rs  search.rs  settings.rs  telemetry.rs  transcription.rs  transcription_runtime.rs  transcription_runtime_discovery.rs  vault_list.rs  window_lifecycle.rs
src-tauri/src/ai_agents/: args.rs  chitragupta_events.rs  discovery.rs  events.rs  path_env.rs  process_stream.rs
src-tauri/src/claude_cli/: args.rs  args_tests.rs  discovery.rs  discovery_tests.rs  process.rs  status_tests.rs  stream.rs  stream_subprocess_tests.rs  stream_tests.rs  types.rs
src-tauri/src/commands/: ai.rs  git.rs  git_clone.rs  git_connect.rs  mod.rs  reveal.rs  settings_cmds.rs  system.rs  system_tests.rs  transcription.rs  vault.rs  version.rs
src-tauri/src/frontmatter/: mod.rs  ops.rs  ops_update_tests.rs  yaml.rs
src-tauri/src/git/: clone.rs  command_timeout.rs  commit.rs  connect.rs  dates.rs  locality.rs  mod.rs  pulse.rs  remote.rs  status.rs  status_tests.rs  tests.rs
src-tauri/src/settings/: last_vault_tests.rs  tests.rs  theme_preset_tests.rs
src-tauri/src/vault/: app_importer.rs  app_importer_golden_tests.rs  app_importer_io.rs  app_importer_preview.rs  app_importer_progress.rs  app_importer_progress_tests.rs  app_importer_tests.rs  cache.rs  config_seed.rs  entry.rs  exporter.rs  exporter_progress.rs  exporter_progress_tests.rs  file.rs  folders.rs  frontmatter.rs  frontmatter_regression_tests.rs  getting_started.rs  html_exporter.rs  html_exporter_progress.rs  html_exporter_progress_tests.rs  html_exporter_tests.rs  (+65 more)
(+1948 files in other folders)
