[package]
name = "grimoire"
version = "0.1.438"
description = "Personal knowledge and life management app"
authors = ["Srinivas Pendela"]
license = "AGPL-3.0-or-later"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "grimoire_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
tauri = { version = "2.11.2", features = ["protocol-asset", "devtools", "tray-icon"] }
tauri-plugin-log = "2"
gray_matter = "0.2"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3"
base64 = "0.22"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
dirs = "5"
# Native window materials: NSVisualEffectView vibrancy on macOS, Mica on Windows.
window-vibrancy = "0.6"
aws-config = "1"
aws-sdk-s3 = "1"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-prevent-default = "4.0.4"
sentry = "0.37"
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
security-framework = "3.7.0"

[dev-dependencies]
